update path-sum-ii-1.java